@@ -2,9 +2,9 @@ package com.password926.agijagi.child.domain;
 
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Component;
+import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @RequiredArgsConstructor
 @Component
@@ -13,14 +13,16 @@ public class ChildDetailReader {
     private final MemberChildReader memberChildReader;
     private final ChildReader childReader;
 
+    @Transactional(readOnly = true)
     public ChildDetail readByMemberAndChild(long memberId, long childId) {
         Child child = childReader.read(childId);
         MemberChild memberChild = memberChildReader.readByMemberAndChild(memberId, childId);
         long followerNum = memberChildReader.readFollowerNum(childId);
 
-        return ChildDetail.of(child, memberChild.getRole(), followerNum);
+        return ChildDetail.of(child, memberChild.getAuthority(), followerNum);
     }
 
+    @Transactional(readOnly = true)
     public List<ChildDetail> readByMember(long memberId) {
         List<MemberChild> memberChilds = memberChildReader.readByMember(memberId);
 
@@ -28,8 +30,8 @@ public class ChildDetailReader {
                 .map(memberChild -> {
                     Child child = childReader.read(memberChild.readChildId());
                     long followerNum = memberChildReader.readFollowerNum(child.getId());
-                    return ChildDetail.of(childReader.read(memberChild.readChildId()), memberChild.getRole(), followerNum);
+                    return ChildDetail.of(childReader.read(memberChild.readChildId()), memberChild.getAuthority(), followerNum);
                 })
-                .collect(Collectors.toList());
+                .toList();
     }
 }
